--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -11,6 +11,9 @@
     <link rel="stylesheet" href="{{ "/css/fonts.css" | relURL }}" />
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css">
     {{ partial "head_custom.html" . }}
+	  
+    <!--- allow Netlify CMS Identity to work, for the /admin/ page --->
+    <script type="text/javascript" src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
   </head>
 
   <body{{if .IsPage}} class="page"{{ end }}>
