--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -192,3 +192,14 @@ tr:nth-child(even) { background: #eee }
 }
 
 .joke-container { margin:0 auto;}
+img[src$='#floatleft']
+{
+  float:left;
+  margin: 0.7rem;
+}
+img[src$='#floatright']
+{
+  float:right;
+  margin: 0.7rem;
+}
+
