--- a/static/css/style.css
+++ b/static/css/style.css
@@ -128,6 +128,7 @@ pre {
   border: 1px solid #ddd;
   box-shadow: 5px 5px 5px #eee;
   overflow-x: auto;
+  white-space: pre-wrap;
 }
 code { background: #f9f9f9; }
 pre code {
