--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -141,8 +141,12 @@ pre code {
 img, iframe, video { max-width: 100%; }
 blockquote {
   background: #f9f9f9;
+  border: 1px solid #ddd;
   border-left: 5px solid #ccc;
   padding: 3px 1em 3px;
+  box-shadow: 5px 5px 5px #eee;
+  overflow-x: auto;
+  white-space: pre-wrap;
 }
 
 table {
