--- a/static/css/style.css
+++ b/static/css/style.css
@@ -126,9 +126,11 @@ hr {
 /* code */
 pre {
   border: 1px solid #ddd;
+  border-left: 5px solid #ccc;
   box-shadow: 5px 5px 5px #eee;
   overflow-x: auto;
   white-space: pre-wrap;
+  padding: 3px 1em 3px;
 }
 code { background: #f9f9f9; }
 pre code {
