added error comment

--- a/layouts/partials/comments.html
+++ b/layouts/partials/comments.html
@@ -1,1 +1,3 @@
+<!-- Sadly, please ignore the Cross-Origin Read Blocking (CORB) errors and the ad tracker soundwave.bnmla.com that doesn't even exist anymore.
+Disqus is adding these, not me. -->
 {{ template "_internal/disqus.html" . }}
