added clicky analytics

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -43,6 +43,7 @@
 {{ end }}
 
 {{ template "_internal/google_analytics.html" . }}
+<script async data-id="101474234" src="//static.getclicky.com/js"></script>
 
 </body>
 </html>
